--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>dev.gl.calc.Calc</exec.mainClass>
+        <exec.mainClass>dev.gl.calc.EntryPoint</exec.mainClass>
     </properties>
 </project>
