--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,20 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dev.gl</groupId>
     <artifactId>calc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
     <packaging>jar</packaging>
+    <name>Simple Calculator</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
         <exec.mainClass>dev.gl.calc.EntryPoint</exec.mainClass>
     </properties>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>   
+    </build>
 </project>
