--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>src/main/resources_sounds</directory>
+                <filtering>false</filtering>
+            </resource>
         </resources>   
     </build>
 </project>
