A lot of things have been added to resouceBundles

--- a/src/main/resources/dict.properties
+++ b/src/main/resources/dict.properties
@@ -1,6 +1,7 @@
 # main window
 mw_title = Calculator
 
+
 # menu
 menu_main = Main
 menu_history = History
@@ -12,4 +13,63 @@ menu_save = Save...
 menu_exit = Exit
 menu_en = En
 menu_ru = Ru
-main_menu=Main
+
+
+# history
+history_title = History
+history_table_column = Operation
+history_info_title = History Manager
+history_info_body = History of operations is empty. Nothing to save.
+
+
+# about
+about_title = About
+about_version = Version
+about_home = Home:
+about_credits = Credits:
+
+
+# settings
+settings_title = Settings
+settings_calculations = Calculations
+settings_scale = Scale:
+settings_rm = Rounding Mode:
+settings_io = I/O
+settings_sorting_order = Sorting order of operations:
+settings_gui = GUI
+settings_sound = Turn on/off sound
+settings_debugging = Debugging
+settings_equals_button = Block 'Equals' button if wrong state occurs
+
+
+# help
+help_title = Help
+help_menu = Menu shortcuts
+help_about = About: F1
+help_settings = Settings: F2
+help_help = Help: F3
+help_save = Save: Ctrl+S
+help_exit = Exit: F12
+help_history = History: Ctrl+H
+help_clear_history = Clear History: Ctrl+Shift+D
+help_en = Switch to English: Ctrl+Shift+1
+help_ru = Switch to Russian: Ctrl+Shift+2
+
+help_memory = Memory shortcuts
+help_memory_add = Memory Add: Ctrl+P
+help_memory_subtract = Memory Subtract: Ctrl+Q
+help_memory_recall = Memory Recall: Ctrl+R
+help_memory_clear = Memory Clear: Ctrl+L
+
+help_operators = Operators shortcuts
+help_operators_equals = Equals: Enter
+help_operators_sign = Change sign: F9
+help_operators_del = DEL: Backspace
+help_operators_ce = CE: Delete
+help_operators_c = C: Escape
+help_operators_percent = Percent: Shift+5
+help_operators_1x = 1/x: R
+help_operators_power = x^2: Q
+help_operators_root = 2√x: Shift+2
+
+
