Values of enums have been added to resourceBundles

--- a/src/main/resources/dict.properties
+++ b/src/main/resources/dict.properties
@@ -73,3 +73,19 @@ help_operators_power = x^2: Q
 help_operators_root = 2√x: Shift+2
 
 
+# enum: historySortingOrder
+history_sorting_order_ftl = FIRST_TO_LAST
+history_sorting_order_ltf = LAST_TO_FIRST
+
+
+# enum: RoundingModeLocalized
+rm_ceiling = CEILING
+rm_down = DOWN
+rm_floor = FLOOR
+rm_half_down = HALF_DOWN
+rm_half_even = HALF_EVEN
+rm_half_up = HALF_UP
+rm_unnecessary = UNNECESSARY
+rm_up = UP
+
+
